[package]
name = "catfact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "2.3.1", features = ["tls", "json"]}
serde = {version = "1.0.131", features = ["derive"]}
serde_json = "1.0.59"
exitcode = "1.1.2"
structopt = { version = "0.3", default-features = false }